z-index not working having issues with about responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+h2{
+    text-align: center;
+    font-size: 30px;
+}
+
 /*---navigation---*/
 
 #navigation {
@@ -45,14 +50,15 @@
 }
 
 /*--home--*/
-#home{
+
+#home {
     background: url("../img/laptop-on-desk.jpg");
     background-size: cover;
     height: 100vh;
     background-position: center;
 }
 
-#home .container{
+#home .container {
     height: 100vh;
     text-align: left;
     width: 100%;
@@ -61,7 +67,7 @@
     flex-direction: column;
 }
 
-#home h1{
+#home h1 {
     font-size: 40px;
     font-weight: 700;
     margin-bottom: 10px;
@@ -70,7 +76,7 @@
     filter: drop-shadow(5px 5px 5px #00000080);
 }
 
-#home p{
+#home p {
     font-size: 20px;
     letter-spacing: 5px;
     margin-top: 0;
@@ -81,17 +87,73 @@
     filter: drop-shadow(5px 5px 5px #00000080);
 }
 
-#home .social{
+#home .social {
     float: left;
 }
 
-#home .social .fa{
+#home .social .fa {
     color: #fff;
     font-size: 20px;
     margin-right: 30px;
     filter: drop-shadow(5px 5px 5px #00000080);
 }
+
 /*--about--*/
+
+#about .container {
+    margin: 50px 0;
+}
+
+#about-laptop {
+    width: 100%;
+    height: auto;
+  }
+
+#about .about-box {
+    box-shadow: 0 0 0 15px rgba(221, 110, 6)inset;
+    margin-right: 0;
+    margin-top: 30px;
+    position: relative;
+    display: block;
+}
+
+#about .about-box .about-image{
+    position: relative;
+}
+
+#about .box-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0.5s;
+    z-index: 3;
+    transform: translate(30px) translateX(-30px);
+}
+
+#about .about-box .about-image {
+    transform: translateY(30px) translateX(-30px);
+    width: 100%;
+    z-index: 1;
+    height: 100%;
+
+}
+
+#about .row .about-content{
+    margin-top: 80px;
+    color: #000008;
+    font-weight: 200;
+}
+
+.content-header{
+    color:#0d0d0d;
+}
+
+.content-body{
+    color:#0d0d0d;
+}
+
 
 /*--contact--*/
 
